--- a/cmd/app/Dockerfile
+++ b/cmd/app/Dockerfile
@@ -1,3 +1,4 @@
+
 FROM golang:1.24.1-alpine
 
 RUN mkdir /build
@@ -6,4 +7,8 @@ WORKDIR /build
 COPY ../../go.* .
 RUN go mod download
 
-CMD ["make", "run-app"]
+COPY ../../. .
+
+# CMD ["go", "run", "./cmd/app/main.go"]
+
+CMD ["go", "test"]
