--- a/app.env
+++ b/app.env
@@ -1,6 +1,7 @@
 TOKEN_SYMMETRIC_KEY=12345678901234567890123456789012
 ACCESS_TOKEN_DURATION=15m
-# REFRESH_TOKEN_DURATION=24h
+REFRESH_TOKEN_DURATION=24h
+BUY_TICKET_TRANSACTION_DURATION=15m
 
 
 # DB_DRIVER=postgres
