change models to fit the new schema

--- a/cmd/app/Dockerfile
+++ b/cmd/app/Dockerfile
@@ -9,6 +9,6 @@ RUN go mod download
 
 COPY ../../. .
 
-# CMD ["go", "run", "./cmd/app/main.go"]
+CMD ["go", "run", "./cmd/app/main.go"]
 
-CMD ["go", "test"]
+# CMD ["go", "test"]
