--- a/deployment/docker-compose.yaml
+++ b/deployment/docker-compose.yaml
@@ -1,13 +1,40 @@
 services:
+
+  postgres:
+    container_name: postgres_container
+    hostname: postgres
+    image: postgres:14.8-alpine3.18
+    env_file:
+      - db.env
+    ports:
+      - "5432:5432"
+    volumes:
+      - data-volume:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U puser -d artworks"]
+      interval: 30s
+      timeout: 30s
+      retries: 3
+      start_period: 60s
+    networks:
+      - postgres-db
+
   app:
-    container_name: app-container
+    container_name: app_artworks
     build:
       context: ../
       dockerfile: ./cmd/app/Dockerfile
     # ports:
     # env_file:
     #   - app.env
-    # depends_on:
-    #   - postgres
-    # networks:
-    #   - postgres
+    depends_on:
+      - postgres
+    networks:
+      - postgres-db
+
+volumes:  
+  data-volume: 
+
+networks:
+  postgres-db:
+    name: postgres-net
