--- a/configs/db.env
+++ b/configs/db.env
@@ -1,4 +1,4 @@
-POSTGRES_HOST = postgres_container
+POSTGRES_HOST = postgres_artworks
 POSTGRES_DB = artworks
 POSTGRES_PORT = 5432
 POSTGRES_USER = puser
