--- a/deployment/docker-compose.yaml
+++ b/deployment/docker-compose.yaml
@@ -1,11 +1,11 @@
 services:
 
   postgres:
-    container_name: postgres_container
+    container_name: postgres_artworks
     hostname: postgres
     image: postgres:14.8-alpine3.18
     env_file:
-      - db.env
+      - ../configs/db.env
     ports:
       - "5432:5432"
     volumes:
