--- a/cmd/app/Dockerfile
+++ b/cmd/app/Dockerfile
@@ -1,6 +1,10 @@
 # Стадия сборки (builder) - это "временный слой"
 FROM golang:1.24.2-alpine AS builder
 
+# Устанавливаем зависимости (добавляем swag)
+RUN apk add --no-cache git bash && \
+    go install github.com/swaggo/swag/cmd/swag@latest
+
 RUN mkdir /build
 WORKDIR /build
 
@@ -10,6 +14,11 @@ RUN go mod download
 
 # Копируем весь проект (из корня, так как context: ../)
 COPY . .
+
+# RUN CGO_ENABLED=0 GOOS=linux go list -m all
+# Перемещаем docs в правильное место (чтобы соответствовать пути модуля)
+# RUN mkdir -p /build/src/git.iu7.bmstu.ru/ped22u691/PPO.git && \
+    # mv docs /build/src/git.iu7.bmstu.ru/ped22u691/PPO.git/
 
 # Собираем приложение с оптимизациями
 # CGO_ENABLED=0 - Генерирует полностью статический бинарный файл
@@ -23,6 +32,10 @@ RUN CGO_ENABLED=0 GOOS=linux go build \
 # Финальная стадия - Новый базовый слой
 FROM alpine:latest  
 
+# # Устанавливаем зависимости (добавляем swag)
+# RUN apk add --no-cache git bash && \
+#     go install github.com/swaggo/swag/cmd/swag@latest
+
 RUN mkdir /app
 WORKDIR /app
 
@@ -32,6 +45,8 @@ COPY --from=builder /build/bin/artwork-app .
 # Копируем необходимые файлы конфигурации
 COPY --from=builder /build/configs ./configs
 COPY --from=builder /build/migrations ./migrations
+COPY --from=builder /build/src/git.iu7.bmstu.ru/ped22u691/PPO.git/docs ./docs
+
 
 # Устанавливаем зависимости для runtime (если нужны)
 RUN apk add --no-cache ca-certificates tzdata
