--- a/cmd/app/Dockerfile
+++ b/cmd/app/Dockerfile
@@ -23,18 +23,19 @@ COPY . .
 # Собираем приложение с оптимизациями
 # CGO_ENABLED=0 - Генерирует полностью статический бинарный файл
 # -ldflags="-s -w" - Удаляет отладочную и другую необязательную информацию
-RUN CGO_ENABLED=0 GOOS=linux go build \
-    -ldflags="-s -w" \                  
+RUN /go/bin/swag init -g ./cmd/app/main.go --output ./docs && \
+    CGO_ENABLED=0 GOOS=linux go build \
+    -ldflags="-s -w" \
     -o /build/bin/artwork-app \
     ./cmd/app/main.go
+# RUN CGO_ENABLED=0 GOOS=linux go build \
+#     -ldflags="-s -w" \                  
+#     -o /build/bin/artwork-app \
+#     ./cmd/app/main.go
 
 
 # Финальная стадия - Новый базовый слой
 FROM alpine:latest  
-
-# # Устанавливаем зависимости (добавляем swag)
-# RUN apk add --no-cache git bash && \
-#     go install github.com/swaggo/swag/cmd/swag@latest
 
 RUN mkdir /app
 WORKDIR /app
@@ -45,8 +46,11 @@ COPY --from=builder /build/bin/artwork-app .
 # Копируем необходимые файлы конфигурации
 COPY --from=builder /build/configs ./configs
 COPY --from=builder /build/migrations ./migrations
-COPY --from=builder /build/src/git.iu7.bmstu.ru/ped22u691/PPO.git/docs ./docs
+# COPY --from=builder /build/src/git.iu7.bmstu.ru/ped22u691/PPO.git/docs ./docs
 
+# Устанавливаем зависимости (добавляем swag)
+RUN apk add --no-cache git bash && \
+    go install github.com/swaggo/swag/cmd/swag@latest
 
 # Устанавливаем зависимости для runtime (если нужны)
 RUN apk add --no-cache ca-certificates tzdata
