--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -2,6 +2,7 @@ app:
   token_symmetric_key: "12345678901234567890123456789012"
   access_token_duration: "15h"
   buy_ticket_transaction_duration: "15m"
+  port: 8080
 
 datebase:
   max_open_conns: 10      # Максимальное количество открытых соединений
