--- a/configs/logger.yaml
+++ b/configs/logger.yaml
@@ -1,4 +1,4 @@
 type: "dev"
-level: "info"  # debug, info, error
+level: "debug"  # debug, info, error
 file: "logs/app.log"  # Путь к файлу логов
 stdout: true    # Вывод в консоль (true/false)
