--- a/deployment/Makefile
+++ b/deployment/Makefile
@@ -15,5 +15,14 @@ dev:
 dev_up:
 	$(DOCKER_COMPOSE) -f $(PROD_FILE) -f $(DEV_FILE) up app
 
+clickhouse:
+	$(DOCKER_COMPOSE) -f $(PROD_FILE) -f $(DEV_FILE) up --build clickhouse_artworks clickhouse_migrator_artworks
+
+down:
+	$(DOCKER_COMPOSE) -f $(PROD_FILE) -f $(DEV_FILE) down -v clickhouse_artworks clickhouse_migrator_artworks
+
+all:
+	$(DOCKER_COMPOSE) -f $(PROD_FILE) -f $(DEV_FILE) up --build -d
+
 clear_templ:
 	rm -f ./internal/frontend/components/*_templ.go
