--- a/deployment/docker-compose.yaml
+++ b/deployment/docker-compose.yaml
@@ -13,6 +13,7 @@ services:
     networks:
       - postgres-db
       - redis_artworks
+      - clickhouse-db
     labels:
       - "project=artworks"
 
@@ -64,15 +65,48 @@ services:
       - redis_artworks
     labels:
       - "project=artworks"
+  
+  clickhouse_artworks:
+    container_name: clickhouse_artworks
+    hostname: clickhouse_artworks
+    image: clickhouse/clickhouse-server:23.8-alpine
+    ports:
+      - "8123:8123"  
+      - "9000:9000"  
+    volumes:
+      - clickhouse-data:/var/lib/clickhouse
+      # - ../configs/clickhouse/users.xml:/etc/clickhouse-server/users.xml
+      # - ../configs/clickhouse/config.xml:/etc/clickhouse-server/config.xml
+    env_file:
+      - ../configs/clickhouse.env
+    networks:
+      - clickhouse-db
+    healthcheck:
+      # "clickhouse", "client", "-u ${CLICKHOUSE_USER}", "--password ${CLICKHOUSE_PASSWORD}", "-q 'SELECT 1'"
+      test: wget --no-verbose --tries=1 http://127.0.0.1:8123/ping || exit 1
+      interval: 10s
+      timeout: 10s
+      retries: 3
       
+  clickhouse_migrator_artworks:
+    container_name: clickhouse_migrator_artworks
+    depends_on:
+      clickhouse_artworks:
+        condition: service_healthy
+    env_file:
+      - ../configs/clickhouse.env
+    build:
+      context: ../migrations/clickhouse
+      dockerfile: Dockerfile
+    networks:
+      - clickhouse-db
+    labels:
+      - "project=artworks"
+
 volumes:
+  clickhouse-data:
   data-volume:
-    # Имя тома
     driver: local
-    # driver_opts:
-    #   o: bind
-    #   type: none
-    #   device: ../data/db_data  # Папка на хосте
 
 
 networks:
@@ -80,3 +114,5 @@ networks:
     name: postgres-net
   redis_artworks:
     name: redis_artworks
+  clickhouse-db:
+    name: clickhouse-db
